--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -2,7 +2,7 @@
   <h1> La página de {{name}}</h1>
   <p>Esto es un párrafo</p>
   <input type="text" [(ngModel)]="name">
-  <button class="btn-primary" (click)="onButtonClicked()">Pulsar</button>
+  <button class="btn-primary" (click)="onSearch(name)">Buscar</button>
   <div class="row">
     <div class="col">
       <h3>ngFor example</h3>
