added register user and authentication

--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -14,4 +14,9 @@
       País: {{user.country}}
     </div>
   </div>
+  <div class="row">
+    <div class="col">
+      <button class="btn btn-danger" (click)="deleteClicked()">Borrar</button>
+    </div>
+  </div>
 </div>
