--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,15 +1,8 @@
 <div class="container" style="padding-bottom: 50px; padding-top: 50px">
   <div class="row">
-    <div class="col form-group">
-      <input type="text" [(ngModel)]="name">
-      <button class="btn btn-primary ml-1" (click)="onSearch(name)">Buscar</button>
-      <button class="btn btn-warning ml-1" [routerLink]="['/new']">Nuevo usuario</button>
-    </div>
-  </div>
-  <div class="row">
     <div class="col">
       <ul>
-        <li class="list-group-item-action p-1" *ngFor="let person of users" [routerLink]="['/user', person.id]"
+        <li class="list-group-item-action p-1" *ngFor="let person of users" [routerLink]="['/users', person.id]"
             style="cursor: pointer">
           {{person.name}} ({{person.age}})
         </li>
