--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -17,6 +17,7 @@
   <div class="row">
     <div class="col">
       <button class="btn btn-danger" (click)="deleteClicked()">Borrar</button>
+      <button class="btn btn-warning ml-1" [routerLink]="['edit']">Editar</button>
     </div>
   </div>
 </div>
